<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/logoicon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sri Bagavath"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:textColor="#fff"

            android:gravity = "center"

            android:textSize="20dp"
            android:id="@+id/toolbar_title" />




    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Main Centre"
                android:layout_margin="10dp"
                android:textSize="18dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/cv"
                android:visibility="visible"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sri Bagavath Mission"
                    android:layout_margin="5dp"
                    android:textSize="18dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_address"
                        android:layout_margin="5dp"
                        android:textSize="16dp"
                        android:textColor="#000"
                        android:textStyle="bold"
                        />

</LinearLayout>

            </android.support.v7.widget.CardView>



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sri Bagavath Mission Chennai Centres"
                android:layout_margin="10dp"
                android:textSize="18dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">




                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1. West Mambalam Center. Chennai"
                        android:layout_margin="5dp"
                        android:textSize="18dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chennai_address1"
                        android:layout_margin="5dp"
                        android:textSize="16dp"
                        android:textColor="#000"
                        android:textStyle="bold"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">




                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2. Ambattur Center, Chennai"
                        android:layout_margin="5dp"
                        android:textSize="18dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chennai_address2"
                        android:layout_margin="5dp"
                        android:textSize="16dp"
                        android:textColor="#000"
                        android:textStyle="bold"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>





            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:visibility="visible"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">




                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sri Bagavath Mission Paramathi Velur Centre"
                        android:layout_margin="5dp"
                        android:textSize="18dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vellore_address"
                        android:layout_margin="5dp"
                        android:textSize="16dp"
                        android:textColor="#000"
                        android:textStyle="bold"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>







            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:visibility="visible"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">




                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mr.SaranKumar"
                        android:layout_margin="5dp"
                        android:textSize="18dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tirchi_address"
                        android:layout_margin="5dp"
                        android:textSize="16dp"
                        android:textColor="#000"
                        android:textStyle="bold"
                        />

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>


</ScrollView>


</LinearLayout>
